--- a/templates/HFC/problem_statements_submit.html
+++ b/templates/HFC/problem_statements_submit.html
@@ -14,7 +14,7 @@
 <div class="banner-wrap">
     <div class="content-width sm-content-width">
         <div class="banner__main">
-            <h1>Suggest a problem statement</h1>
+            <h1>Problem statement</h1>
             <p class="large">Suggest any problem statements in the areas of governance, civic engagement, social
                 enterprise and disaster management</p>
         </div>
