--- a/templates/HFC/problem_statements.html
+++ b/templates/HFC/problem_statements.html
@@ -30,11 +30,11 @@
             <section id="contents">
                 {% for prob_list in problems_list %}
                 <article class="post-blog">
-                    <h4><a href="{% url 'problem_discription' prob_list.title_slug %}">{{prob_list.title}}</a></h4>
+                    <h4><a href="{% url 'problem_discription' prob_list.title_slug %}">{{prob_list.brief}}</a></h4>
                     <div class="badge-sec"><strong>Submitted By: </strong><span class="badge badge--yellow">{% if prob_list.partner_id %}{{prob_list.partner_id}}{%endif%}</span>
                         <strong>Issue Areas: </strong><span style="text-transform: capitalize;"> {{prob_list.issuearea}}</span>
                     </div>
-                    <p>{{prob_list.summary}}</p>
+                    <p>{{prob_list.overview}}</p>
                     <div class="badge-sec badge-sec__alt"><strong>Status: </strong><span class="badge">{{prob_list.status}}</span></div>
                     <a class="btn btn--border" href="{% url 'problem_discription' prob_list.title_slug %}">View
                         Details</a>
@@ -44,10 +44,10 @@
             <!--contents -->
             <aside id="sidebar">
                 <div class="sidebar__list">
-                    <p>Explore problem statements across various issue areas</p>
+                    <p>Explore other issue areas</p>
                     <ul>
                         {% for issue_area in issue_areas %}
-                    <li><a href="{% url 'problem_statements_with_issuearea' issue_area.issue_area_slug %}">{{issue_area.issue_area}}</a></li>
+                    <li><a href="{% url 'issue_area' issue_area.issue_area_slug %}">{{issue_area.issue_area}}</a></li>
                         {% endfor %}
                     </ul>
                 </div>
