--- a/templates/HFC/project_detail.html
+++ b/templates/HFC/project_detail.html
@@ -2,8 +2,8 @@
 {% block meta_tags %}
 
 <meta content="" name="keywords">
-<meta property="og:title" content="{{problem.title}}">
-<meta name="description" property="og:description" content="{{problem.summary|striptags|truncatewords:20}}">
+<meta property="og:title" content="{{project.name}}">
+<meta name="description" property="og:description" content="{{project.project_desc|striptags|truncatewords:20}}">
 <meta property="og:type" content="article" >    
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
 <meta property="og:url" content="https://hackforchange.co/problem-statements/{{problem.title_slug}}">
@@ -32,34 +32,38 @@
                 <div class="blog-single">
                     <h3>{{project.name}}</h3>
                     <div class="blog-single__content">
-                        <p class="large sbold">Description</p>
-                        <p style="text-align:justify;">{{project.project_desc}}</p>
+                        <p class="large sbold">Overview</p>
+                        <p style="text-align:justify;">{{project.project_overview}}</p>
+                        <p class="large sbold">Goal</p>
+                        <p style="text-align:justify;">{{project.goal}}</p>
                         <p class="large sbold">Github link</p>
-                        <p style="text-align:justify;">{{project.project_link}}</p>
+                        <p> <a href={{project.project_link}} >{{project.project_link}}</a></p>
                         {% if project.website_link %}
                         <p class="large sbold">Website Link</p>
                         <p><a href={{project.website_link}} >{{project.website_link}}</a></p>
                         {% endif %}
-                        <p class="large sbold">Execution Partners</p>
-                            {% for item in partners.execution%}   
+                        <p class="large sbold">Funded by</p>
+                            {% for item in partners.funding%}   
                         <p style="text-align:justify;">{{item.get_partner}}</p>
                         {% endfor %}
                         <p></p>
-                        <p class="large sbold">Funding Partners</p>
-                            {% for item in partners.funding%}
-                        <p style="text-align:justify;">{{item.get_partner}}</p>
-                            {% endfor %}  
+                        <p class="large sbold">Community Partners</p>
+                            
+                        <p style="text-align:justify;"></p>
+                             
                     </div>
                 </div>
             </section>
             
             <aside id="sidebar">
-                <div class="sidebar__list">
-                    <p>Explore problem statements across various issue areas</p>
-                    <ul>
-                        {% for issue_area in issue_areas %}
-                    <li><a href="{% url 'problem_statements_with_issuearea' issue_area.issue_area_slug %}">{{issue_area.issue_area}}</a></li>
-                        {% endfor %}
+                <div class="sidebar__member-sec">
+                    <p class="sbold">Our Top Contributors</p>
+                    <ul class="sidebar__member">
+                        {% for contributor in contributors%}
+                        {% if contributor.image %}
+                        <li><a  title="{{contributor.name}}" href="{{contributor.linkedin_profile}}" target="_blank"><img src={{contributor.image.url}} alt="{{contributor.name}}" ></a></li>
+                        {% endif %}
+                        {%endfor%}
                     </ul>
                 </div>
                 <div class="newsletter">
