Hover effect to image added

--- a/templates/HFC/community_member.html
+++ b/templates/HFC/community_member.html
@@ -105,7 +105,7 @@
                     <ul class="sidebar__member">
                         {% for contributor in contributors%}
                         {% if contributor.image %}
-                        <li><a href="{{contributor.linkedin_profile}}" target="_blank"><img src={{contributor.image.url}} alt="{{contributor.name}}" ></a></li>
+                        <li><a  title="{{contributor.name}}" href="{{contributor.linkedin_profile}}" target="_blank"><img src={{contributor.image.url}} alt="{{contributor.name}}" ></a></li>
                         {% endif %}
                         {%endfor%}
                     </ul>
