--- a/templates/HFC/problem_statements_submit.html
+++ b/templates/HFC/problem_statements_submit.html
@@ -31,12 +31,12 @@
                 <form class="site-form" action="" method="post">
                     {%csrf_token%}
                     <div class="form-field">
-                        <label for="">Title</label>
-                        {{form.title}}
+                        <label for="">Problem Statement</label>
+                        {{form.problem_statement}}
                     </div>
                     <div class="form-field">
-                        <label for="">Summary</label>
-                        {{form.summary}}
+                        <label for="">Overview</label>
+                        {{form.overview}}
                     </div>
                     <div class="form-field">
                         <label for="">Background Information</label>
