--- a/templates/HFC/problem_statements_with_issue_area.html
+++ b/templates/HFC/problem_statements_with_issue_area.html
@@ -31,12 +31,12 @@
             <section id="contents">
                 {% for prob_list in problems_list  %}
                 <article class="post-blog">
-                    <h4><a href="{% url 'problem_discription' prob_list.title_slug %}">{{prob_list.brief}}</a></h4>
+                    <h4><a href="{% url 'problem_discription' prob_list.title_slug %}">{{prob_list.problem_statement|safe}}</a></h4>
                     <div class="badge-sec"><strong>Submitted By : </strong><span
                             class="badge badge--yellow">{{prob_list.partner_id}}</span>
                         <strong>Issue Area : </strong><span class="badge badge--pink"></span><span style="text-transform: capitalize;">{{prob_list.issuearea}}</span>
                     </div>
-                    <p>{{prob_list.overview}}</p>
+                    <p>{{prob_list.overview|safe}}</p>
                     <div class="badge-sec badge-sec__alt"><strong>Status : </strong><span
                             class="badge">{{prob_list.status}}</span></div>
                     <a class="btn btn--border" href="{% url 'problem_discription' prob_list.title_slug %}">View
