--- a/templates/HFC/center_contributor_signup.html
+++ b/templates/HFC/center_contributor_signup.html
@@ -15,7 +15,7 @@
 <div class="banner-wrap">
     <div class="content-width sm-content-width">
         <div class="banner__main">
-            <h1>Signup as a Contributor</h1>
+            <h1>Signup as a Member</h1>
             <p class="large">
                 Inviting students from {{center.organization_name}} to join college specific centres
             </p>
@@ -99,7 +99,7 @@
             <!--contents -->
             <aside id="sidebar">
                 <div class="sidebar__member-sec">
-                    <p class="sbold">Our Top Contributors</p>
+                    <p class="sbold">Top Contributors</p>
                     <ul class="sidebar__member">
                         {% for contributor in contributors%}
                         {% if contributor.image %}
