--- a/templates/HFC/community.html
+++ b/templates/HFC/community.html
@@ -47,7 +47,7 @@
                             <p class="large sbold">{{center.organization_name}}</p>
                             <p>{{center.project.count}} Projects, {{center.community_member_set.count}} Members</p>
                             <a href="center/{{center.organization_name_slug}}/signup/" class="btn btn--hfc"
-                                id="center_contrib">Join as a Contributor</a>
+                                id="center_contrib">Join as a member</a>
                         </div>
                     </div>
                     {% endfor %}
@@ -72,7 +72,7 @@
                             <p class="large sbold">{{chapter.organization_name}}</p>
                             <p>{{chapter.project.count}} Projects, {{chapter.community_member_set.count}} Members</p>
                             <a href="{{chapter.organization_name_slug}}/signup/" class="btn btn--border">Join as a
-                                Contributor</a>
+                                member</a>
                         </div>
                     </div>
                     {% endfor %}
