--- a/templates/HFC/mentor_signup.html
+++ b/templates/HFC/mentor_signup.html
@@ -115,7 +115,7 @@
             <!--contents -->
             <aside id="sidebar">
                 <div class="sidebar__member-sec">
-                    <p class="sbold">Our Top Mentors</p>
+                    <p class="sbold">Top Mentors</p>
                     <ul class="sidebar__member">
                         {% for mentor in mentors%}
                         {% if mentor.image %}
