--- a/templates/HFC/project_detail.html
+++ b/templates/HFC/project_detail.html
@@ -70,7 +70,7 @@
            
             <aside id="sidebar">
                 <div class="sidebar__member-sec">
-                    <p class="sbold">Our Top Contributors</p>
+                    <p class="sbold">Top Contributors</p>
                     <ul class="sidebar__member">
                         {% for contributor in contributors%}
                         {% if contributor.image %}
