--- a/templates/HFC/community_member.html
+++ b/templates/HFC/community_member.html
@@ -101,7 +101,7 @@
             <!--contents -->
             <aside id="sidebar">
                 <div class="sidebar__member-sec">
-                    <p class="sbold">Our Top Contributors</p>
+                    <p class="sbold">Top Contributors</p>
                     <ul class="sidebar__member">
                         {% for contributor in contributors%}
                         {% if contributor.image %}
