--- a/templates/HFC/issue_area_detail.html
+++ b/templates/HFC/issue_area_detail.html
@@ -47,7 +47,7 @@
                         <p class="large sbold"></p>
                         <p style="text-align:justify;"></p>
                     </div>
-                </div>
+                </div><br>
                         <h2>Open problem statements</h2><br>
                         {% for problem_statement in problem_statement_list  %}
                         <article class="post-blog">
@@ -60,12 +60,14 @@
             </section>
             
             <aside id="sidebar">
-                <div class="sidebar__list">
-                    <p>Explore problem statements across various issue areas</p>
-                    <ul>
-                        {% for issue_area in issue_areas %}
-                    <li><a href="{% url 'issue_area' issue_area.issue_area_slug %}">{{issue_area.issue_area}}</a></li>
-                        {% endfor %}
+                <div class="sidebar__member-sec">
+                    <p class="sbold">Our Partners in {{issue.issue_area}}</p>
+                    <ul class="sidebar__member">
+                        {% for partner in partners%}
+                        {% if partner.logo %}
+                        <li><a  title="{{partner.name}}" href="{{partner.website}}" target="_blank"><img src={{partner.logo.url}} alt="{{partner.name}}" style ="height:70px;width:100px;" ></a></li>
+                        {% endif %}
+                        {%endfor%}
                     </ul>
                 </div>
                 <div class="newsletter">
