--- a/templates/HFC/screening_email.html
+++ b/templates/HFC/screening_email.html
@@ -10,7 +10,7 @@
         <tr>
           <td>
             <p>Dear {{name}},</p>
-            <p>Thank you for signing up to become a contributor. For us to get you involved in the right project, 
+            <p>Thank you for signing up to become a member. For us to get you involved in the right project, 
                we want to understand your capabilities better.</p>
             <p>Please take a minute to take the screening, so that we can get started.</p>
               <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
