--- a/templates/HFC/job_application.html
+++ b/templates/HFC/job_application.html
@@ -49,11 +49,8 @@
                             {{form.contact_number}}
                         </div>
                         <div class="form-field">
-                            <label for="">City</label>
-                            <div class="form-field__select">
-                                {{form.city}}
-                                <i class="fas fa-chevron-down"></i>
-                            </div>
+                            <label for="">Worksample link</label>
+                                {{form.coder_profile}}
                         </div>
                     </div> 
                     <div class="form-control">
