Job applicant page heading modified

--- a/templates/HFC/job_application.html
+++ b/templates/HFC/job_application.html
@@ -15,7 +15,7 @@
 <div class="banner-wrap">
     <div class="content-width sm-content-width">
         <div class="banner__main">
-            <h1>Join Our Core Team</h1>
+            <h1>Join our core team</h1>
             <p class="large">
                 Inviting young talented persons from various cities to join our core team.
             </p>
@@ -29,7 +29,7 @@
         <div class="main">
             <section id="contents">
                 <div class="uni-chapter">
-                    <h2></h2>
+                    <h2>Join our core team</h2>
                 </div>
                 <form class="site-form" method="post" id="volform" sub-change-url="{% url 'load_area_of_expertise' %}">
                     {%csrf_token%}
