--- a/templates/HFC/job_application.html
+++ b/templates/HFC/job_application.html
@@ -49,7 +49,7 @@
                             {{form.contact_number}}
                         </div>
                         <div class="form-field">
-                            <label for="">Worksample link</label>
+                            <label for="">Work Sample Link</label>
                                 {{form.coder_profile}}
                         </div>
                     </div> 
