--- a/templates/HFC/footer.html
+++ b/templates/HFC/footer.html
@@ -34,6 +34,7 @@
                         <li><a href="{% url 'problem_statements' %}">Problem Statements</a></li>
                         <li><a href="{% url 'projects' %}">Projects</a></li>
                         <li><a href="{% url 'community' %}">Community</a></li>
+                        <li><a href="{% url 'job' %}">Join Core Team</a></li>
                     </ul>
                 </div>
                 <div class="footer__menu">
