--- a/templates/ScreeningApp/screening_result_fail.html
+++ b/templates/ScreeningApp/screening_result_fail.html
@@ -19,10 +19,9 @@
                 <img src="{% static 'images/fail.jpg' %}" style = "width:500px;">
             </div>
             <div class="thanku-heading">
-               <h3>Unfortunately, you did not clear our screening test. We understand that you want to contribute to social change. 
-                   If you are still very keen to contribute, please checkout our <a href="https://www.hackforchange.co.in/projects" target="_blank"> projects </a> page.
-               </h3>
-                <h3>Or, if you have concerns regarding your screening, you can reach out to us <a href="https://www.hackforchange.co.in/contact" target="_blank"> here.</a></h3>
+               <h3>Unfortunately, you did not clear our screening test. You can check how you fared <a href="feedback" target="_blank"> here.</a></h3>
+               <h3>We understand that you want to contribute to social change. If you are still very keen to contribute, please checkout our <a href="https://www.hackforchange.co.in/projects" target="_blank"> projects </a> page. Or, if you have concerns regarding your screening, you can reach out to us <a href="https://www.hackforchange.co.in/contact" target="_blank"> here.</a></h3>
+     
            </div>
         </div>
     </div>
