--- a/templates/ScreeningApp/screening_submission.html
+++ b/templates/ScreeningApp/screening_submission.html
@@ -50,6 +50,8 @@
               <input type='hidden' name={{question.id}} value=" " />
               {%endfor%}
               {%endfor%}
+              <input type=button class="btn btn-primary" value="Edit" onClick="javascript:history.go(-1);">
+
               <input type="submit" class="btn btn-success btn-lg" value="Submit">
             </form>
       </section>
